src/test/resources/Parser/SyntaxErrors/AvoidCastingEverythingToBool.front
class A:

    doNot(A a) {
        if (a) {

        }
    }